--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
   - composer install
 
 before_script:
+  - sudo apt-get update
   - ./build/install_fpm_$(phpenv version-name).sh
 
 script: phpunit -c phpunit.xml.dist
