--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ php:
   - 5.5
   - 5.6
   - 7.0
-#  - hhvm
+  - hhvm
 
 install:
   - composer install
@@ -18,7 +18,7 @@ install:
 before_script:
   - sudo apt-get update
   - sudo apt-get install apache2 libapache2-mod-fastcgi
-  - ./build/install_fpm_$(phpenv version-name).sh
+  - ./build/install_travis_$(phpenv version-name).sh
 
 script: phpunit -c phpunit.xml.dist
 
