--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,7 +8,8 @@
 </testsuites>
 
 <logging>
-    <log type="coverage-clover" target="build/logs/clover.xml"/>
+  <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
+  <log type="coverage-clover" target="build/logs/clover.xml"/>
 </logging>
 
 <filter>
